--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ h3{font-weight:300;font-size: 35px;line-height:38px;margin-bottom:40px;}
 
 .header-bg {
 	background:url("LosAngeles.jpg") no-repeat;
+	background-repeat: no-repeat;
 	background-size: cover;
 }
 .header {background:rgba(0,0,0,0.8);position: absolute;top: 0;bottom: 0;left: 0;right: 0;}
